# cta_monitor

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/superpowers/plans/: 2026-07-17-cta-monitor.md
docs/superpowers/specs/: 2026-07-17-cta-monitor-design.md
scripts/: export_excel.py  probe_financials.py  run.py
src/cta_monitor/: biyi.py  config.py  datahub.py  db.py  excel.py  history.py  metrics.py  models.py  pipeline.py  render.py  slack.py
tests/: test_biyi.py  test_config.py  test_datahub.py  test_db.py  test_excel.py  test_history.py  test_metrics.py  test_pipeline.py  test_render.py  test_slack.py
