[project]
name = "cta-monitor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "pandas>=2.0",
    "requests>=2.31",
    "nexus-data-hub-sdk",
    "h2>=4.3.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.uv.sources]
nexus-data-hub-sdk = { path = "/Users/mac/dev/alpha_copy/vendor/nexus-data-hub-sdk", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cta_monitor"]
